# otus_homework_engeneer_calc

./: CMakeLists.txt
include/: add.hpp  astnode.hpp  div.hpp  mul.hpp  parser.hpp  sub.hpp  variable.hpp
src/: main.cpp  parser.cpp
